--- a/room.html
+++ b/room.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
+<div class="row">
+    <div class="room-list eight columns">ff
+        <div class="row">
+            <div class="rooms lightblue-bg">
+            
+            </div>
+            <div class="rooms lightblue-bg">fewfe</div>
+            <div class="rooms lightblue-bg">fewfe</div>
 
-
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/less" href="./less/module.less">
-    <link rel="stylesheet" type="text/less" href="./less/tool.less">
-    <link rel="stylesheet" type="text/less" href="./less/color.less">
-</head>
-
-<body>
-    <div class="row">
-        <div class="room-list ">
-        </div>
-        <div class="user">
         </div>
     </div>
+    <div class="user four columns">
+        <div class="user-info box brown-bg">
+            <div class="user-data">User: Oberon</div>
+            <div class="user-data">User: Oberon</div>
+            <div class="user-data">User: Oberon</div>
+            <div class="user-data">User: Oberon</div>
+        </div>
+    </div>
+</div>
 
-    <script type="text/javascript" src="js/lesscss.js"></script>
-</body>
 
-</html>
