--- a/room.html
+++ b/room.html
@@ -4,7 +4,12 @@
             <div class="rooms lightblue-bg">
             
             </div>
-            <div class="rooms lightblue-bg">fewfe</div>
+            <div class="rooms lightblue-bg">
+                <div class="row">Hi room</div>
+                <div class="row">
+                    
+                </div>
+            </div>
             <div class="rooms lightblue-bg">fewfe</div>
 
         </div>
