--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/less" href="less/color.less">
     <script type="text/javascript" src="lib/jquery/jquery.js"></script>
     <script type="text/javascript" src="js/gameMap.js"></script>
+    <script type="text/javascript" src="js/player.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </head>
