--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="lib/jquery/jquery.js"></script>
     <script type="text/javascript" src="js/gameMap.js"></script>
     <script type="text/javascript" src="js/player.js"></script>
+    <script type="text/javascript" src="js/toolbox.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </head>
@@ -23,9 +24,9 @@
             <div class="player-info">
                 <div class="row">
                     <div class="player">
-                        <div>Player: Tom</div>
-                        <div>Player: Tom</div>
-                        <div>Player: Tom</div>
+                        <div>玩家: Tom</div>
+                        <div>目前錢幣:<span class="money"></span></div>
+                        <div>目前順序:<span class="order"></span></div>
                     </div>
                     <div class="player">
                         <div>Player: Tom</div>
@@ -48,13 +49,20 @@
         </div>
         <div class="five columns game-main">
             <canvas id="game-plain" height="480" width="480"></canvas>
-
-            <div class="tool-box">
+            
+            <canvas id="tool" height="200" width="400"></canvas>
+            <!--<div class="tool-box">
                 <div class="tool">fe</div>
                 <div class="tool">fe</div>
                 <div class="tool">fe</div>
                 <div class="tool">fe</div>
             </div>
+            <div class="pointer-box">
+                <div class="pointer">fe</div>
+                <div class="pointer">fe</div>
+                <div class="pointer">fe</div>
+                <div class="pointer">fe</div>
+            </div>-->
         </div>
 
         <div class="four columns">
