--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="js/gameMap.js"></script>
     <script type="text/javascript" src="js/player.js"></script>
     <script type="text/javascript" src="js/toolbox.js"></script>
-    <script type="text/javascript" src="js/game.js"></script>
+    <script type="text/javascript" src="js/gameRoom.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </head>
 
