--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
             <div class="one-third columns"></div>
         </div>
     </div>
+    <script src="lib/underscore/underscore.js"></script>
+    <script src="lib/mustache/mustache.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.2.1.js"></script>
     <script src="lib/lesscss/lesscss.js"></script>
     <script src="js/socket.js"></script>
     <script src="js/game.js"></script>
     <script src="js/color.js"></script>
     <script src="js/main.js"></script>
+    
     <!--
     <script src="lib/jquery/jquery.js"></script>
     <script src="lib/underscore/underscore.js"></script>
