--- a/game.html
+++ b/game.html
@@ -1,57 +1,38 @@
-<!DOCTYPE html>
-
-
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="less/normalize.css">
-    <link rel="stylesheet" type="text/css" href="less/skeleton.css">
-    <link rel="stylesheet" type="text/less" href="less/game.less">
-    <link rel="stylesheet" type="text/less" href="less/tool.less">
-    <link rel="stylesheet" type="text/less" href="less/color.less">
-    <script type="text/javascript" src="lib/jquery/jquery.js"></script>
-    <script type="text/javascript" src="js/gameMap.js"></script>
-    <script type="text/javascript" src="js/player.js"></script>
-    <script type="text/javascript" src="js/toolbox.js"></script>
-    <script type="text/javascript" src="js/gameRoom.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-</head>
-
-<body id="game">
-    <div class="row">
-        <div class="three columns">
-            <div class="player-info">
-                <div class="row">
-                    <div class="player">
-                        <div>玩家: Tom</div>
-                        <div>目前錢幣:<span class="money"></span></div>
-                        <div>目前順序:<span class="order"></span></div>
+<div class="row">
+    <div class="three columns">
+        <div class="player-info">
+            <div class="row">
+                <div class="player">
+                    <div>玩家: Tom</div>
+                    <div>目前錢幣:<span class="money"></span>
                     </div>
-                    <div class="player">
-                        <div>Player: Tom</div>
-                        <div>Player: Tom</div>
-                        <div>Player: Tom</div>
-                    </div>
-                    <div class="player">
-                        <div>Player: Tom</div>
-                        <div>Player: Tom</div>
-                        <div>Player: Tom</div>
-                    </div>
-                    <div class="player">
-                        <div>Player: Tom</div>
-                        <div>Player: Tom</div>
-                        <div>Player: Tom</div>
+                    <div>目前順序:<span class="order"></span>
                     </div>
                 </div>
+                <div class="player">
+                    <div>Player: Tom</div>
+                    <div>Player: Tom</div>
+                    <div>Player: Tom</div>
+                </div>
+                <div class="player">
+                    <div>Player: Tom</div>
+                    <div>Player: Tom</div>
+                    <div>Player: Tom</div>
+                </div>
+                <div class="player">
+                    <div>Player: Tom</div>
+                    <div>Player: Tom</div>
+                    <div>Player: Tom</div>
+                </div>
             </div>
-
         </div>
-        <div class="five columns game-main">
-            <canvas id="game-plain" height="480" width="480"></canvas>
-            
-            <canvas id="tool" height="200" width="400"></canvas>
-            <!--<div class="tool-box">
+
+    </div>
+    <div class="five columns game-main">
+        <canvas id="game-plain" height="480" width="480"></canvas>
+
+        <canvas id="tool" height="200" width="400"></canvas>
+        <!--<div class="tool-box">
                 <div class="tool">fe</div>
                 <div class="tool">fe</div>
                 <div class="tool">fe</div>
@@ -63,18 +44,14 @@
                 <div class="pointer">fe</div>
                 <div class="pointer">fe</div>
             </div>-->
-        </div>
+    </div>
 
-        <div class="four columns">
-            <div class="coding-plain" contenteditable="true">
-
-            </div>
+    <div class="four columns">
+        <div class="coding-plain" contenteditable="true">
 
         </div>
 
     </div>
 
-    <script type="text/javascript" src="lib/lesscss/lesscss.js"></script>
-</body>
+</div>
 
-</html>
