--- a/index.html
+++ b/index.html
@@ -10,30 +10,28 @@
     <link rel="stylesheet" type="text/less" href="./less/index.less">
     <link rel="stylesheet" type="text/less" href="./less/tool.less">
     <link rel="stylesheet" type="text/less" href="./less/color.less">
-
+    <link rel="stylesheet" type="text/less" href="./less/game.less">
 
     <!--    <script data-main="js/main" src="lib/requirejs/require.js"></script>-->
 
 </head>
 
 <body id="login-body">
-    <div class="container">
-        <div class="row">
-            <div class="one-third columns">&nbsp;</div>
-            <div class="one-third columns">
-                <div class="login center lightblue">
-                    <div class="row">
-                        <label for="id">Name</label>
-                        <input type="text" id="id">
-                    </div>
-                    <div class="row center">
-                        <button class="green" id="login">Login</button>
-                    </div>
+    <div class="row">
+        <div class="one-third columns">&nbsp;</div>
+        <div class="one-third columns">
+            <div class="login center lightblue">
+                <div class="row">
+                    <label for="id">Name</label>
+                    <input type="text" id="id">
                 </div>
-
+                <div class="row center">
+                    <button class="green" id="login">Login</button>
+                </div>
             </div>
-            <div class="one-third columns"></div>
+
         </div>
+        <div class="one-third columns"></div>
     </div>
     <script src="lib/underscore/underscore.js"></script>
     <script src="lib/mustache/mustache.js"></script>
@@ -43,9 +41,10 @@
     <script src="js/game.js"></script>
     <script src="js/color.js"></script>
     <script src="js/main.js"></script>
-    
-    <!--
+
+
     <script src="lib/jquery/jquery.js"></script>
+    <!--
     <script src="lib/underscore/underscore.js"></script>
     <script src="lib/backbone/backbone.js"></script>
     <script src="js/app.js"></script>
