--- a/game.html
+++ b/game.html
@@ -11,10 +11,8 @@
     </div>
 
     <div class="four columns">
-        <div class="coding-plain" contenteditable="true">
-
-        </div>
-
+        <textarea class="coding-plain" style="width:100%; height:70vh" disabled="true"></textarea>
+        <button id="send">送出</button>
     </div>
 
 </div>
