--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="four columns">
-        <textarea class="coding-plain" style="width:100%; height:70vh" disabled="true"></textarea>
+        <textarea class="coding-plain" style="width:100%; height:70vh"></textarea>
         <button id="send">送出</button>
     </div>
 
