--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/less" href="./less/index.less">
     <link rel="stylesheet" type="text/less" href="./less/tool.less">
     <link rel="stylesheet" type="text/less" href="./less/color.less">
+    <link rel="stylesheet" href="./lib/codemirrow/codemirror.css">
+
     <link rel="stylesheet" type="text/less" href="./less/game.less">
 
     <!--    <script data-main="js/main" src="lib/requirejs/require.js"></script>-->
