--- a/game.html
+++ b/game.html
@@ -2,12 +2,13 @@
     <div class="three columns">
         <div class="player-info">
         </div>
-
+        <div class="system-info">
+            <span>系統訊息</span>
+            
+        </div>
     </div>
     <div class="five columns game-main">
         <canvas id="game-plain" height="480" width="480"></canvas>
-
-        <canvas id="tool" height="200" width="400"></canvas>
     </div>
 
     <div class="four columns">
