--- a/game.html
+++ b/game.html
@@ -8,6 +8,10 @@
         </div>
     </div>
     <div class="five columns game-main">
+        <div class="time" style="text-align: right; border:1px solid">
+            <span id="timeLeft"></span>
+            秒
+        </div>
         <canvas id="game-plain" height="600" width="600"></canvas>
     </div>
 
