--- a/game.html
+++ b/game.html
@@ -3,12 +3,12 @@
         <div class="player-info">
         </div>
         <div class="system-info">
-            <span>系統訊息</span>
+            <span style="font-size: 2em;"></span>
 
         </div>
     </div>
     <div class="five columns game-main">
-        <div class="time" style="text-align: right; border:1px solid">
+        <div class="time" style="font-size: 2em;;text-align: right;">
             <span id="timeLeft"></span>
             秒
         </div>
