--- a/game.html
+++ b/game.html
@@ -8,9 +8,13 @@
         </div>
     </div>
     <div class="five columns game-main">
-        <div class="time" style="font-size: 2em;;text-align: right;">
-            <span id="timeLeft"></span>
-            秒
+        <div class="time" style="font-size: 2em;">
+            <div style="text-align:left;">
+                第<span id="level">0</span>回合
+            </div>
+            <div style="text-align:right;">
+                剩餘秒數:<span id="timeLeft">0</span>秒
+            </div>
         </div>
         <canvas id="game-plain" height="600" width="600"></canvas>
     </div>
